example/tests/snapshots/comprehensive_snapshots__regex_grammar__char_class.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"[a-z]\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                "-",
            ),
            start: 2,
            end: 2,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 3,
            end: 3,
        },
        ParseError {
            reason: UnexpectedToken(
                "]",
            ),
            start: 4,
            end: 4,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 5,
            end: 5,
        },
    ],
)
