example/tests/snapshots/comprehensive_snapshots__regex_grammar__error_unclosed_bracket.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"[\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
    ],
)
