example/tests/snapshots/comprehensive_snapshots__regex_grammar__plus.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"a+\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "\"+\"",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 2,
            end: 2,
        },
    ],
)
